Fix stretched out hero image at small widths.

--- a/dps/src/foster/meet/meetFosters.scss
+++ b/dps/src/foster/meet/meetFosters.scss
@@ -8,7 +8,7 @@
   }
 }
 
-body img {
+img.fosters {
   width: 100%;
 }
 
